--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+h1{
+    margin-bottom: 20px;
+}
+
 input {
     width:100%;
 }
@@ -12,7 +16,15 @@ button{
     text-align: left;
 }
 
-
 .my_row{
     margin:5px 0px 0px 0px;
+    /* max-width: 800px; */
+}
+
+.text-center{
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: grey;
+    padding: 15px;
+    margin-bottom: 40px;
 }
